# bidsstatsmod_groupmods

./: .gitignore  README.md  main.py  path_config.json  pyproject.toml  setup_uv.sh
notebooks/: model_illustrations.ipynb  transformations.ipynb
scripts/: utils.py
scripts/model_specs/: base_spec.json  group_models.json
scripts/sbatch_fitlins/: submit_fitlins_mods.sh
