[project]
name = "bidsstatmod_groupmods"
version = "0.0.1"
description = "A BIDS Stats Model Group Analysis Illustration using FitLins"
readme = "README.md"
authors = [
    { name = "Michael Demidenko", email = "demidenko.michael@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyzmq==26.4.0", # avoids build error with 27.0.0
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "nilearn>=0.9.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "nbformat>=5.8.0",
    "IPython>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    # Pinned installs from GitHub
    "fitlins @ git+https://github.com/jmumford/fitlins.git@paddedint",
    "setuptools",
    "pybids @ git+https://github.com/bids-standard/pybids.git@26b3f7e"

]


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[project.scripts]
bidsstatmod_groupmods = "scripts.bidsstatmod_groupmods:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

# Add sources section
[tool.uv.sources]
pybids = { git = "https://github.com/jmumford/pybids.git", rev = "fix_fir_delay_mapping" }
fitlins = { git = "https://github.com/jmumford/fitlins.git", rev = "paddedint" }

# Override version conflicts
[tool.uv]
override-dependencies = [
    "pybids @ git+https://github.com/jmumford/pybids.git@fix_fir_delay_mapping"
]